PROJECT(k3dsdk-expression)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

LIST(SORT HEADERS)
LIST(SORT SOURCES)

INCLUDE_DIRECTORIES(${k3d_SOURCE_DIR})

ADD_LIBRARY(k3dsdk-expression SHARED ${HEADERS} ${SOURCES})
K3D_GENERATE_DEF_FILE(k3dsdk-expression)

TARGET_LINK_LIBRARIES(k3dsdk-expression k3dsdk)

INSTALL(TARGETS k3dsdk-expression
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION ${K3D_LIBDIR}
	ARCHIVE DESTINATION ${K3D_LIBDIR})

