PROJECT(k3dsdk-function-parser)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

IF(CMAKE_HAS_SORT)
	LIST(SORT HEADERS)
	LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

INCLUDE_DIRECTORIES(${k3d_SOURCE_DIR})

ADD_LIBRARY(k3dsdk-function-parser SHARED ${HEADERS} ${SOURCES})
K3D_GENERATE_DEF_FILE(k3dsdk-function-parser)

TARGET_LINK_LIBRARIES(k3dsdk-function-parser k3dsdk)

INSTALL(TARGETS k3dsdk-function-parser
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)

PROJECT(k3dsdk-function-parser)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

IF(CMAKE_HAS_SORT)
	LIST(SORT HEADERS)
	LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

INCLUDE_DIRECTORIES(${k3d_SOURCE_DIR})

ADD_LIBRARY(k3dsdk-function-parser SHARED ${HEADERS} ${SOURCES})
K3D_GENERATE_DEF_FILE(k3dsdk-function-parser)

TARGET_LINK_LIBRARIES(k3dsdk-function-parser k3dsdk)

INSTALL(TARGETS k3dsdk-function-parser
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)

